--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.3",
+    "mongodb": "^5.5.0",
     "next": "13.4.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
+    "tauri": "^0.14.1",
     "typescript": "5.0.4"
   }
 }
