--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-next": "13.4.3",
     "mongodb": "^5.5.0",
     "next": "13.4.3",
+    "next-connect": "^1.0.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
